--- a/sass/partials/_list.scss
+++ b/sass/partials/_list.scss
@@ -1,9 +1,6 @@
-// 00B220 / green
-// 81b563 / lighter green
-
 $list-item-text-color: #444444;
 
-.list-content {
+.content {
   padding: 0 2%;
   margin-bottom: 2em;
   
@@ -156,16 +153,7 @@ $list-item-text-color: #444444;
   }
 
   input.edit {
-    font-family: 'Gloria Hallelujah', cursive;
-    color: #444;
-    padding: 0 10px 10px 10px;
-    border-width: 0 0 3px;
-    border-color: $status-all;
-    font-size: 1.2em;
-    display: block;
-    width: 100%;
-    outline: none;
-    box-sizing: border-box;
+    @extend %input-main;
   }
 
   button.delete {
