--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -30,6 +30,7 @@
   
   @media(max-width: $bp-narrow-plus-1) {
     position: absolute;
+    z-index: 2;
     width: 100%;
     box-sizing: border-box;
     top: 0;
@@ -42,14 +43,14 @@
 nav {
   position: absolute;
   left: 0;
-  top: 55px;
+  top: -90px;
   width: 100%;
   text-align: center;
-  display: none;
   z-index: 1;
+  transition: top 0.16s $ease-in-cubic;
 
   .show-nav & {
-    display: block;
+    top: 55px;
   }
   
   @media(min-width: $bp-narrow-plus-1) {
@@ -78,7 +79,7 @@ nav {
       background: white;
       transition: all ease-in-out 0.2s;
       
-      &:hover span {
+      &:hover .count {
         background: #ffffff;
       }
 
@@ -110,7 +111,12 @@ nav {
     }
     
     &:last-child {
-      box-shadow: 0 0 40px;
+      box-shadow: none;
+      transition: box-shadow ease-in-out 0.2s;
+      .show-nav & {
+        box-shadow: 0 0 40px;
+      }
+
     }
 
     @media (min-width: $bp-narrow-plus-1) {
