--- a/sass/partials/_task-entry.scss
+++ b/sass/partials/_task-entry.scss
@@ -1,7 +1,7 @@
   #task-entry {
     position: absolute;
     z-index: 3;
-    width: 90%;
+    width: 86%;
     text-align: right;
     right: 0;
     
@@ -32,14 +32,16 @@
     }
     
     input {
-      width: 96%;
-      margin-top: 9px;
-      padding: 6px 57px 6px 6px;
+      width: 84%;
+      margin: 9px auto 0;
+      padding: 6px;
+      float: left;
       border: none;
       background: #FFFFFF;
       @include box-sizing(border-box);
       transition: box-shadow ease-in-out 0.1s;
       font-size: 1.2em;
+      border: 1px solid darken($nav-background-mobile, 10%);
       
       @include placeholder {
         color: #676767;
@@ -49,17 +51,15 @@
       &:focus {
         outline: none;
       }
-      
-      @media (min-width: $bp-narrow) {
-        padding-right: 97px;
-      }
 
       @media (min-width: $bp-narrow-plus-1) {
+        float: none;
         font-size: 1.4em;
         width: 100%;
         margin: 0;
         padding: 11px 57px 11px 5%;
         box-shadow: 0 2px 5px rgba(#000000, 0.4);
+        border: none;
         
         &:focus {
           box-shadow: 0 3px 10px rgba(0, 0, 0, 0.42);
