--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -45,9 +45,12 @@ nav {
   left: 0;
   top: -90px;
   width: 100%;
+  padding-bottom: 6px;
   text-align: center;
   z-index: 1;
   transition: top 0.16s $ease-in-cubic;
+  background: darken($nav-background-mobile, 10%);
+  box-shadow: 0 0 40px;
 
   .show-nav & {
     top: 55px;
@@ -58,6 +61,9 @@ nav {
     position: fixed;
     z-index: 1;
     display: block;
+    box-shadow: 0 0 10px;
+    padding-bottom: 0;
+    background: darken($nav-background-mobile, 10%);
   }
   
   ul {
@@ -69,30 +75,40 @@ nav {
   }
   
   li {
+    float: left;
+    width: 33.333333333%;
+
     a {
       display: block;
+      padding: 6px 0;
       position: relative;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
-      line-height: 3em;
       background: white;
       transition: all ease-in-out 0.2s;
       
+      span:not(.count) {
+        display: none;
+      }
+
       &:hover .count {
         background: #ffffff;
       }
 
       & .count {
+        position: absolute;
+        bottom: 3px;
+        left: 50%;
         width: 21px;
+        display: inline-block;
+        line-height: 1em;
         margin-left: 10px;
         padding: 5px 0;
         font-family: sans-serif;
         font-size: .7em;
         font-weight: bold;
-        display: inline-block;
         color: #FFFFFF;
-        line-height: 1em;
         border-radius: 1em;
         transition: all ease-in-out 0.2s;
       }
@@ -110,24 +126,13 @@ nav {
       }
     }
     
-    &:last-child {
-      box-shadow: none;
-      transition: box-shadow ease-in-out 0.2s;
-      .show-nav & {
-        box-shadow: 0 0 40px;
-      }
-
-    }
-
     @media (min-width: $bp-narrow-plus-1) {
-      float: left;
-      width: 33.333333333%;
       a {
         background: transparent;
-      }
 
-      &:last-child {
-        box-shadow: none;
+        span:not(.count) {
+          display: inline;
+        }
       }
     }
   }
